<resources>
    <string name="app_name">Star Wars Catalog</string>
    <string name="person">person</string>
    <string name="planet">planets</string>
    <string name="vehicles">vehicles</string>
    <string name="films">films</string>
    <string name="species">species</string>
    <string name="starships">starships</string>
    <string name="name">Name: %1$s</string>
    <string name="birth_year">Birth year: %1$s</string>
    <string name="mass">Mass: %1$s</string>
    <string name="height">Height: %1$s</string>
    <string name="gender">Gender: %1$s</string>
    <string name="hair">Hair color: %1$s</string>
    <string name="eye">Eye color: %1$s</string>
    <string name="skin">Skin color: %1$s</string>
    <string name="homeworld"> Homeworld: </string>
    <string name="specie"> Species: </string>
    <string name="filmstxt"> Films: </string>
    <string name="starshiptxt"> Starships: </string>
    <string name="vehiclestxt"> Vehicles: </string>
    <string name="rotation">"Rotation: %1$s"</string>
    <string name="orbital">Orbital period: %1$s</string>
    <string name="diameter">Diameter: %1$s</string>
    <string name="gravity">Gravity: %1$s</string>
    <string name="terrain">Terrain: %1$s</string>
    <string name="surface_water">Surface water: %1$s</string>
    <string name="population">Population: %1$s</string>
    <string name="characters"> Characters: </string>
    <string name="planets"> Planets: </string>
    <string name="title">"Title: %1$s"</string>
    <string name="episode">Episode: %1$s</string>
    <string name="synopsis">Synopsis: %1$s</string>
    <string name="director">Director: %1$s</string>
    <string name="producer">Producer: %1$s</string>
    <string name="release">Release data: %1$s</string>
    <string name="pilots">Pilots:</string>
    <string name="model">Model: %s</string>
    <string name="manufactur">Manufacturer: %s</string>
    <string name="cost_of_credits">Cost in credits: %s</string>
    <string name="length">Length: %s</string>
    <string name="maxspeed">Max atmosphering speed: %s</string>
    <string name="crew">Crew: %s</string>
    <string name="passengers">Passengers: %s</string>
    <string name="cargo">Cargo capacity: %s</string>
    <string name="consumables">Consumables: %s</string>
    <string name="vehiclesclass">Vehicles class: %s</string>
    <string name="classification">"Classification: %s"</string>
    <string name="designation">Designation: %s</string>
    <string name="average">Average height: %s</string>
    <string name="lifespan">Average lifespan: %s</string>
    <string name="language">Language: %s</string>
    <string name="hyperdrive">Hyperdrive rating: %s</string>
    <string name="mglt">MGLT: %s</string>
    <string name="starshipclass">Starship: %s</string>
</resources>